# mynd

./: .gitignore  Pipfile  README.md  add_chunk.py  create_document.py  main.py  pyproject.toml  setup.py  summarize_document.py
.github/workflows/: ci.yml
benthoscan/containers/: __init__.py  registry.py
benthoscan/core/datatypes/: camera.py
benthoscan/core/io/: csv.py
benthoscan/core/utils/: __init__.py  config.py  time.py
benthoscan/datatypes/: __init__.py  camera_factories.py  camera_types.py  geometry.py  image.py
benthoscan/filesystem/: __init__.py  registry.py  search.py
benthoscan/io/: __init__.py  config.py  csv.py  dict_readers.py  dict_writers.py
benthoscan/pipelines/setup/: chunk_tasks.py  setup_task.py
benthoscan/project/: json_converters.py  json_writers.py  project.py  summary.py
benthoscan/reconstruction/: __init__.py  build_tasks.py  chunk.py  document.py  file_group.py  image_group.py  reference.py  setup.py  summary.py  tasks.py
benthoscan/tasks/create/: task.py
benthoscan/tasks/setup/: arguments.py  camera_setup.py  chunk_setup.py  chunk_tasks.py  setup_task.py  task.py
benthoscan/utils/: __init__.py  argparse.py  time.py
config/: advanced_registration.toml  base.toml  camera_groups.toml  deprecated.toml  monocular_config.toml  reconstruction.toml  references.toml  register_fast.toml  register_highres.toml  register_lowres.toml  registration.toml  registration_advanced.toml  registration_simple.toml  simple_registration.toml  stereo.toml  stereo_config.toml  stereo_settings.toml
config/chunks/: qd61g27j.toml  qdc5ghs3.toml  qdch0ftq.toml  qdchdmy1.toml  qtqxshxs.toml  r234xgje.toml  r23685bc.toml  r2368bc.toml  r23m7ms0.toml  r29mrd12.toml  r29mrd5h.toml  r7jjskxq.toml  r7jjss8n.toml  r7jjssbh.toml  template.toml
config/data_descriptors/: qd61g27j.toml  qdc5ghs3.toml  qdch0ftq.toml  qdchdmy1.toml  qtqxshxs.toml  r234xgje.toml  r23685bc.toml  r23m7ms0.toml  r29mrd12.toml  r29mrd5h.toml  r7jjskxq.toml  r7jjss8n.toml  r7jjssbh.toml  template.toml
config/dev/: r2368bc.toml
config/metadata/: acfr_cameras.toml
config/sensors/: monocular_config.toml  stereo_config.toml  stereo_flipped_config.toml
config/test_data_descriptors/: qd61g27j_mono.toml
docs/: usage.md
notebooks/: camera_database_ingestion.ipynb  debug_stereo_geometry.ipynb  dev_backend.ipynb  dev_camera_filtering.ipynb  dev_inverse_rectification.ipynb  dev_registration.ipynb  dev_registration.py  dev_registration_pipeline.ipynb  dev_registration_pipeline.py  dev_registration_simple.ipynb  dev_registration_simple.py  export_camera_data_frame.ipynb  export_camera_data_frame.py  export_camera_metadata.ipynb  export_rendered_range_maps.ipynb  export_stereo_calibration.ipynb  export_stereo_geometry.ipynb  export_stereo_range_maps.ipynb  insert_images_into_database.ipynb  range_map_visualization.ipynb  regdev.ipynb  regdev.py  registration_dev.ipynb  sandbox.ipynb  sandbox.py  stereo_disparity_filter.ipynb  stereo_disparity_hitnet.ipynb  visualize_stereo.ipynb  visualize_stereo_geometry.ipynb  visualize_stereo_geometry.py
resources/hitnet_models/: hitnet_eth3d_120x160.onnx  hitnet_eth3d_480x640.onnx
scripts/batch/: qd61g27j_ingest_metadata.sh  qdc5ghs3_ingest_metadata.sh  qdch0ftq_ingest_metadata.sh  qdchdmy1_ingest_metadata.sh  qtqxshxs_ingest_metadata.sh  r234xgje_ingest_metadata.sh  r23685bc_ingest_metadata.sh  r23m7ms0_ingest_metadata.sh  r29mrd12_ingest_metadata.sh  r29mrd5h_ingest_metadata.sh  r7jjskxq_ingest_metadata.sh  r7jjss8n_ingest_metadata.sh  r7jjssbh_ingest_metadata.sh  template_ingest_metadata.sh
scripts/python/: activate_metashape.py
scripts/shell/: add_chunk.sh  batch_add_chunk.sh  batch_create_document.sh  batch_project_setup.sh  batch_registration.sh  create_document.sh  dev_project_setup.sh  dev_reconstruction.sh  dev_registration.sh  export_camera_database.sh  export_camera_databases.sh  export_stereo_geometry.sh  project_setup.sh  test_camera_export.sh  test_ingest_metadata.sh  test_project_setup.sh  test_registration.sh
src/benthoscan/cameras/: __init__.py  camera_factories.py  camera_processors.py  camera_types.py
src/benthoscan/cli/: entrypoint.py  ingestion.py  project_setup.py  reconstruction.py  registration.py
src/benthoscan/containers/: __init__.py  registry.py  table.py
src/benthoscan/data/: image.py
src/benthoscan/datatypes/: __init__.py  camera_factories.py  camera_types.py
src/benthoscan/filesystem/: search.py
src/benthoscan/geometry/: hitnet.py  range_maps.py  stereo.py
src/benthoscan/io/: __init__.py  config_io.py  dataframe_io.py  file_readers.py  file_writers.py  image_io.py
src/benthoscan/project/: __init__.py  build_processors.py  camera_setup.py  data_types.py  json_writers.py  (+1 more)
tests/: test_filesystem.py  test_image.py  test_registry.py  test_utils.py
(+298 files in other folders)
