[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mynd"
version = "0.0.1"
description = "A small API for 3D reconstruction and registration based on images"
authors = ["Martin Kvisvik Larsen <martin.kvisvik.larsen@hotmail.com>"]
readme = "README.md"
packages = [{include = "mynd", from="src"}]
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"

# Local wheel file
metashape = {path = "vendor/Metashape-2.1.0-cp37.cp38.cp39.cp310.cp311-abi3-linux_x86_64.whl"}

addict = "^2.4.0"             # Needed by open3d
arrow = "^1.3.0"
h5py = "^3.11.0"
imageio = "^2.35.1"
loguru = "^0.7.2"
kornia = "^0.7.3"
msgspec = "^0.18.6"
numpy = "^1.26.4"
onnxruntime-gpu = "^1.19.0"
open3d = "0.18.0"
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
plotly = "^5.22.0"
polars = "^0.20.30"
result = "^0.16.1"
scikit-learn = "^1.5.0"       # Needed by open3d
scipy = "^1.13.1"
tqdm = "^4.66.2"


[tool.poetry.group.experimental.dependencies]
# NOTE: Experimental feature
dash = "^2.17.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
jupyter = "^1.0.0"
ruff = "^0.4.9"

[tool.poetry.scripts]
create = "mynd.cli.entrypoint:main"
reconstruct = "mynd.cli.entrypoint:main"
register = "mynd.cli.entrypoint:main"
