[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "mynd"
version = "0.0.1"
description = "A small API for 3D reconstruction and registration based on images"
authors = ["Martin Kvisvik Larsen <martin.kvisvik.larsen@hotmail.com>"]
readme = "README.md"
packages = [{include = "mynd", from="src"}]
package-mode = true


[tool.poetry.dependencies]
python = "~3.11"

# Local wheel file
metashape = {path = "vendor/Metashape-2.1.0-cp37.cp38.cp39.cp310.cp311-abi3-linux_x86_64.whl"}

# TODO: Find approach to add these as dependencies to open3d
scikit-learn = "^1.5.0"                   # Needed by open3d
addict = "^2.4.0"                         # Needed by open3d

arrow = "^1.3.0"
h5py = "^3.11.0"
imageio = "^2.35.1"
loguru = "^0.7.2"
kornia = "^0.7.3"
msgspec = "^0.18.6"
numpy = "^2.0.0"
onnxruntime-gpu = "^1.19.0"
open3d = {extras = ["ml"], version = "^0.18.0"}
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"
python-dotenv = "^1.0.1"
plotly = "^5.22.0"
polars = {extras = ["numpy", "pyarrow", "pandas"], version = "^1.7.1"}
result = "^0.16.1"
scipy = "^1.13.1"
tqdm = "^4.66.2"


[tool.poetry.group.application.dependencies]
fastapi = "^0.114.2"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
jupyter = "^1.0.0"
ruff = "^0.4.9"


[tool.poetry.scripts]
mynd = "mynd.cli.entrypoint:main"
backend = "mynd.backend.runner:main"
